--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
+  "homepage": "https://WMCharles.github.io/React-Blog",
   "name": "posts",
   "version": "0.1.0",
-  "homepage": "https://WMCharles.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,12 +15,12 @@
   },
   "scripts": {
     "start": "PORT=8000 react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json -p 8001",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "server": "json-server --watch db.json -p 8001"
   },
   "eslintConfig": {
     "extends": [
